--- a/GSWeb/css/style.css
+++ b/GSWeb/css/style.css
@@ -50,7 +50,6 @@ html {
     background-position: 50%;
     background-attachment: fixed; 
     display: flex;
-
 }
 
 .banner-text {
@@ -74,6 +73,7 @@ html {
 
 .container-el {
     display: flex;
+    width: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: center; 
